frontend/app/assets/stylesheets/archivesspace/form.less
@import "variables";

fieldset {
  width: 100%;
}

/* custom controls-accordion for radio driven accordion */
.controls-accordion .accordion-group {
  border: none;
}

.controls-accordion .accordion-group:first-child {
  margin-top: 5px;
}

.control-group {
  margin: 0 !important;
  padding: 4px 0;
  .accordion {
    margin-bottom: 0;
    .accordion-body {
      margin-left: -180px;
      .accordion-inner {
        background-color: #fafafa;
        border-bottom: 1px solid #E5E5E5;
      }
    }
  }
  em {
    color: #999;
    font-style: normal;
  }
}

form .control-group {
  &.required {
    .control-label {
      font-weight: bold;    
    }
  }

  .control-label {
    &.has-tooltip {
      border-bottom: 1px dotted #EEE;
    }
  }
}

.control-group.active {
  border-radius: 4px;
  background-color: #fafcff;
}

.control-group .controls.label-only {
  line-height: 18px;
  padding-top: 6px;
}

.inline-subform {
  margin: 4px 0;
  border-top: 1px solid #E5E5E5;
  background-color: #fafafa;
  border-bottom: 1px solid #E5E5E5;
}

.control-group .inline-subform {
  margin-left: -180px;
}

/* identifier fields */
.identifier-fields input {
  width: auto;
  margin-right: 4px;
}

.form-horizontal .form-actions {
  padding-left: 20px;
}

.form-horizontal .form-actions .btn-cancel {
  float: right;
}

.form-actions .btn-submit-group {
  float: left;
}

#save_and_finish_editing {
  margin-left: 4px;
  float: right;
}

.record-pane h3 {
  background-color: #F6F6F6;
  border-bottom: 1px solid #DDD;
  padding-left: 10px;
}

.record-pane section h3 .btn.pull-right {
  margin: 6px 6px 0 0;
}

.record-pane section section h4 .btn.pull-right {
  margin: 2px 6px 0 0;
}

section h3 {
  .dropdown-menu {

  }
}

.record-pane section section h4 {
  background-color: #F6F6F6;
  border-bottom: 1px solid #DDD;
  padding-left: 10px;
  line-height: 36px;
}

#new_subject .terms-container .row-fluid {
  margin-bottom: 5px;

  .control-group {
    padding: 0;
  }
}

.inputs-fill-it-up input,
.inputs-fill-it-up select {
  width: 100%;
}

/* Form sidebar navigation */

.as-nav-list {
  width: 228px;
  margin: 0;
  padding: 0;
  background-color: #fff;
  -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
          border-radius: 6px;
  -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.065);
     -moz-box-shadow: 0 1px 4px rgba(0,0,0,.065);
          box-shadow: 0 1px 4px rgba(0,0,0,.065);
}
.as-nav-list > li > a {
  display: block;
  *width: 190px;
  margin: 0 0 -1px;
  padding: 8px 14px;
  border: 1px solid #e5e5e5;
}
.as-nav-list > li:first-child > a {
  .border-radius(6px 6px 0 0);
}
.as-nav-list > li:last-child > a {
  .border-radius(0 0 6px 6px);
}
.as-nav-list > li:first-child:last-child > a {
  .border-radius(6px)
}
.as-nav-list > .active > a {
  position: relative;
  z-index: 2;
  padding: 9px 15px;
  border: 0;
  text-shadow: 0 1px 0 rgba(0,0,0,.15);
  -webkit-box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
     -moz-box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
          box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
}
.as-nav-list .icon-chevron-right {
  float: right;
  margin-top: 2px;
  margin-right: -6px;
  .opacity(25);
}
.as-nav-list > li > a:hover {
  background-color: #f5f5f5;
}
.as-nav-list a:hover .icon-chevron-right {
  .opacity(50);
}
.as-nav-list .active .icon-chevron-right,
.as-nav-list .active a:hover .icon-chevron-right {
  .opacity(100);
}
.as-nav-list.affix {
  //top: 40px;
}
.as-nav-list.affix-bottom {
  position: absolute !important;
  top: auto;
  bottom: 0px;
}

.as-nav-list {
  .btn-group {
    width: 100%;
  }
  .btn-submit-group {
    width: 100%;
    button:first-child {
      width: 80%;
    }
    #createPlusOne {
      width: 20%;
    }
  }
}

/* Desktop large
------------------------- */
@media (min-width: 1200px) {
  .as-nav-list {
    width: 258px;
  }
}

/* Desktop
------------------------- */
@media (max-width: 980px) {
  .as-nav-list {
    margin-right: 0;
  }
}

/* Tablet to desktop
------------------------- */
@media (min-width: 768px) and (max-width: 980px) {
  /* Adjust sidenav width */
  .as-nav-list {
    width: 166px;
  }
}

/* Tablet
------------------------- */
@media (max-width: 767px) {
  .as-nav-list {
    width: auto;
    margin-bottom: 20px;
  }
  .as-nav-list.affix {
    position: static;
    width: auto;
    top: 0;
  }
}


/* AGENT NAME Form styles */
.subrecord-form-dummy,
.subrecord-form {
  clear: both;
  margin: 20px 0;
  background-color: #FAFAFA;
  .box-shadow(~"1px 1px 3px rgba(0, 0, 0, 0.25)");

  .subrecord-form-heading {
    background-color: #F6F6F6;
    border-bottom: 1px solid #DDD;
    padding-left: 10px;

    min-height: 1.4em;
    margin: 0;
    border-bottom: 1px solid #DDD;
    .border-radius(4px 4px 0 0);

    .btn-group.pull-right {
      margin: 3px 6px 0 0;
    }
  }

  .subrecord-form-fields .subrecord-form {
    .subrecord-form-heading {
      line-height: 30px;
    }
  }

  .subrecord-form-container {
    margin: 0 10px;
    padding: 0 0 10px;

    .alert {
      margin: 10px 0 0;
    }

    .subrecord-form-removal-confirmation,
    .subrecord-form-remove {
      margin: 6px 6px 0 0;
    }

    .subrecord-form-fields {
      background-color: #FFF;
      border: 1px solid #DDD;
      .border-radius(4px);
      margin-top: 10px;
      padding: 10px;

      > .subrecord-form-heading {
        line-height: 36px;
      }

    }
  }

  .subrecord-form {
    margin: 10px 0;
  }

  .instance-container-or-digital-object {
    margin: 0 10px;

    .instance-type-nil,
    .instance-type-digital-object,
    .instance-type-digital-object-link,
    .instance-type-with-container {
      display: none;
    }
  }

  .subrecord-form-inline {
    margin-bottom: 8px;
  }
}

form .subrecord-form .subrecord-form-container .subrecord-form-fields {
  padding: 0;
}

form #terms .subrecord-form-fields {
  padding: 10px;
}

ul.subrecord-form-list {
  margin: 0;
  > li {
    list-style: none;
    position: relative;
  }
  .sortable-placeholder {
    border: 1px dashed #CCC;
    margin: 10px 0;
  }
  .ui-sortable-helper {
    .subrecord-form-fields {
      margin: 0;
    }
  }
  .drag-handle {
    position: absolute;
    left: 5px;
    top: 5px;
    height: 30px;
    width: 30px;
    background-image: url(../../archivesspace/drag_handle_btn.png);
    background-repeat: no-repeat;
    cursor: move;

    &.inline {
      top: 0;
    }
  }

  .sort-enabled > .subrecord-form-fields > .subrecord-form-heading,
  .sort-enabled > .subrecord-form-inline {
    padding-left: 40px;
  }
}

.alert pre {
  background-color: transparent;
  border: none;
}


.dropdown-menu.subrecord-selector {
  li {
    padding: 10px;
  }
  .form-actions {
    margin: 0;
  }
}

.subrecord-form textarea,
.controls textarea {
  width: 90%;
}

.form-messages {
  .linked-to-field {
    cursor: pointer;
    .icon-chevron-down {
      vertical-align: top;
      .opacity(25);
      margin-left: 5px;
    }
    &:hover {
      .icon-chevron-down {
        .opacity(50);
      }
    }
  }
}

.btn-inline-form {
  &.btn {
    padding: 0;
    background-color: transparent;
    margin: 0;
    border: none;
  }

  display: inline-block;
  form {
    margin: 0;
    padding: 0;

    > div {
      display: inline;
    }
  }

  &:last-child {
    .btn {
      .border-radius(0 4px 4px 0);
    }
  }

  &:first-child {
    .btn {
      .border-radius(4px 0 0 4px);
    }
  }

  &:last-child:first-child {
    .btn {
      .border-radius(4px);
    }
  }
}

.CodeMirror {
  #font > .shorthand(@baseFontSize,normal,@baseLineHeight);
  margin-bottom: 9px;
  font-size: @baseFontSize;
  line-height: @baseLineHeight;
  color: @gray;
  .border-radius(@inputBorderRadius);
  background-color: @inputBackground;
  border: 1px solid @inputBorder;
  .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
  overflow: visible;

  .CodeMirror-scroll {
    height: auto;
    overflow: visible;
  }

  .mixed-content-wrapper {
    font-size: 0.9em;
    z-index: 10;
    min-width: 336px;
    display: none;
    font-family: @baseFontFamily;
    .arrow {
      left: 25%;
    }
  }

  .mixed-content-help {
    background-color: #F6F6F6;
    text-shadow: 1px 1px 1px white;
    padding: 0 10px;
    font-size: 0.9em;
    margin-top: @baseLineHeight/2;
    border-top: 1px solid #CCC;
    font-family: @baseFontFamily;
  }

}

.content-list {
  .drag-handle.inline {
    top: 5px !important;
  }

  .subrecord-form-fields {
    background-color: #F6F6F6 !important;

    > .CodeMirror {
      border: none;
      border-top: 1px solid @inputBorder;
      margin: 35px 0 0 0;
      .border-radius(0);
    }
  }
}

.CodeMirror-completions {
  .box-shadow(0 5px 10px rgba(0,0,0,.2));
  border: 1px solid #ccc;
  border: 1px solid rgba(0,0,0,.2);
}

/* Filter fields */
.text-filter-field {
  width: 80%;
}


.content-list .CodeMirror {
  clear: both;
}

